envoy.json
{
    "static_resources": {
        "listeners": [
            {
                "address": {
                    "socket_address": {
                        "address": "0.0.0.0",
                        "port_value": 30443
                    }
                },
                "traffic_direction": "OUTBOUND",
                "filter_chains": [
                    {
                        "filters": [
                            {
                                "name": "envoy.filters.network.http_connection_manager",
                                "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                                    "generate_request_id": true,
                                    "tracing": { 
                                        "provider": { 
                                            "name": "envoy.tracers.fluentd", 
                                            "typed_config": { 
                                                "@type": "type.googleapis.com/envoy.config.trace.v3.FluentdConfig", 
                                                "cluster": "opentelemetry_collector", 
                                                "tag": "Span", 
                                                "stat_prefix": "fluentd_i"
                                            }
                                        } 
                                    },
                                    "codec_type": "AUTO",
                                    "stat_prefix": "ingress_http",
                                    "http_filters": [
                                        {
                                            "name": "envoy.filters.http.router",
                                            "typed_config": {
                                                "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                                            }
                                        }
                                    ],
                                    "route_config": {
                                        "name": "proxy_routes",
                                        "virtual_hosts": [
                                            {
                                                "name": "proxy",
                                                "domains": ["*"],
                                                "routes": [
                                                    {
                                                        "match": {
                                                            "prefix": "/trace/1"
                                                        },
                                                        "route": {
                                                            "cluster": "envoy_cluster1"
                                                        },
                                                        "decorator": {
                                                            "operation": "routeToEnvoy1"
                                                        }
                                                    }
                                                ]
                                            }
                                        ]
                                    }
                                }
                            }
                        ]
                    }
                ]
            }
        ],
        "clusters": [
            {
                "name": "envoy_cluster1",
                "type": "STRICT_DNS",
                "lb_policy": "ROUND_ROBIN",
                "load_assignment": {
                    "cluster_name": "envoy_cluster1",
                    "endpoints": [
                        {
                            "lb_endpoints": [
                                {
                                    "endpoint": {
                                        "address": {
                                            "socket_address": {
                                                "address": "httpbin.org",
                                                "port_value": 443
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    ]
                },
                "transport_socket": {
                    "name": "envoy.transport_sockets.tls",
                    "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
                        "sni": "httpbin.org"
                    }
                }
            },
            {
                "name": "opentelemetry_collector",
                "type": "STRICT_DNS",
                "lb_policy": "ROUND_ROBIN",
                "load_assignment": {
                    "cluster_name": "opentelemetry_collector",
                    "endpoints": [
                        {
                            "lb_endpoints": [
                                {
                                    "endpoint": {
                                        "address": {
                                            "socket_address": {
                                                "address": "0.0.0.0",
                                                "port_value": 8888
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    ]
                }
            }
        ]
    }
}
